--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ QDRANT_HOST = "https://e066027f-3ecd-40eb-85e7-530eca30e3c7.us-east-1-0.aws.clou
 QDRANT_API_KEY = "PpPUdu7Q_fBen-8EOfdmpo9StZnWysnsBMvP3D_NcMUPtwESRdvH3w"
 
 QDRANT_COLLECTION_NAME = "flex-collection"
+
+PINECONE_API_KEY= "7ac77092-189b-40a0-acf8-1513bb986c09"
+PINECONE_ENV = "asia-southeast1-gcp-free"
+PINECONE_COLLECTION_NAME = "flex"
