--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ numpy==1.24.1
 requests==2.28.1
 qdrant-client==1.3.1
 selenium==4.11.2
+pinecone-client==2.2.2
 #protobuf==3.20.x
 # uncomment to use huggingface llms
 # huggingface-hub==0.14.1
